add adjustments on search page main and bottom section

--- a/Search.html
+++ b/Search.html
@@ -63,24 +63,24 @@
       </div>
     </header>
     <main class="search container-fluid px-0">
-      <section class="">
+      <section>
         <div class="toolbar w-100">
-          <div class="w-50 d-flex justify-content-between">
+          <div class="d-flex justify-content-between align-items-center">
             <div>
-              <span class="items-name">Refine</span>
+              <span class="px-3 py-1">Refine</span>
             </div>
-            <div class="w-50 d-flex px-0">
-              <span class="items-results"><strong>664</strong> total</span>
+            <div class="w-50 d-flex justify-content-end align-items-center px-3">
+              <span class="pt-2 px-3"><strong>664</strong> total</span>
               <div class="sort-by d-flex">
-                <label class="px-2">Sort By</label>
-                <div class="custom-select px-2">
+                <span class="sort px-1 pt-3">Sort By</span>
+                <div class="custom-select px-2 my-2">
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="category-main container-fluid row p-0 m-0">
-          <div class="side-box col-4 d-flex flex-column align-items-start justify-content-center pr-0 my-1">
+          <div class="side-box col-4 d-flex flex-column align-items-start justify-content-start pr-0 my-3">
             <div class="block-title w-100 py-2 bg d-flex justify-content-between">
               <a class="text-white px-2" href="#">Category</a>
               <i class="fas fa-chevron-circle-right text-dark px-3 py-1"></i>
@@ -130,7 +130,7 @@
               <i class="fas fa-chevron-circle-right text-dark px-3 py-1"></i>
             </div>
           </div>
-          <div class="product-list-box row col-8 d-flex my-1">
+          <div class="product-list-box row col-8 d-flex my-3">
             <ul class="col-4">
               <li>
                 <div class="product-col">
@@ -140,13 +140,13 @@
                         src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/b/m/bm_01447.jpg"
                         alt="guitar">
                     </div>
-                    <div class="product-details">
-                      <span class="view-icon"></span>
-                      <h4>Heritage Guitars</h4>
-                      <p>Heritage Guitars Artisan Aged Collection H-150 Electric Guitar w/Case - Original Sunburst</p>
+                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
+                      <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
+                      <p class="mb-0">Heritage Guitars Artisan Aged Collection H-150 Electric Guitar w/Case - Original
+                        Sunburst</p>
                     </div>
                     <div class="product-bottom">
-                      <div class="price">$3,700.00 </div>
+                      <div class="text-center text-danger font-weight-bold my-2">$3,700.00 </div>
                     </div>
                   </a>
                 </div>
@@ -159,13 +159,13 @@
                         src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/b/m/bm_01406.jpg"
                         alt="guitar">
                     </div>
-                    <div class="product-details">
-                      <span class="view-icon"></span>
-                      <h4>Heritage Guitars</h4>
-                      <p>Heritage Guitars Artisan Aged Collection H-535 Electric Guitar w/Case - Trans Cherryt</p>
+                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
+                      <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
+                      <p class="mb-0">Heritage Guitars Artisan Aged Collection H-535 Electric Guitar w/Case - Trans
+                        Cherryt</p>
                     </div>
                     <div class="product-bottom">
-                      <div class="price">$4,000.00 </div>
+                      <div class="text-center text-danger font-weight-bold my-2">$4,000.00 </div>
                     </div>
                   </a>
                 </div>
@@ -178,13 +178,13 @@
                         src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/h/r/hrt-012200123-aa_1563849864866_2048x2048.jpg"
                         alt="guitar">
                     </div>
-                    <div class="product-details">
-                      <span class="view-icon"></span>
-                      <h4>Heritage Guitars</h4>
-                      <p>Heritage Guitars Artisan Aged Collection H-535 Electric Guitar w/Case - Original Sunburst</p>
+                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
+                      <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
+                      <p class="mb-0">Heritage Guitars Artisan Aged Collection H-535 Electric Guitar w/Case - Original
+                        Sunburst</p>
                     </div>
                     <div class="product-bottom">
-                      <div class="price">$4,000.00 </div>
+                      <div class="text-center text-danger font-weight-bold my-2">$4,000.00 </div>
                     </div>
                   </a>
                 </div>
@@ -199,13 +199,13 @@
                         src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/4/7/47650_heritage_artisan_aged_collection_h-530_antique_natural_ai09722_2_383x_3x.progressive.jpg"
                         alt="guitar">
                     </div>
-                    <div class="product-details">
-                      <span class="view-icon"></span>
-                      <h4>Heritage Guitars</h4>
-                      <p>Heritage Guitars Artisan Aged Collection H-530 Electric Guitar w/Case - Antique Natural</p>
+                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
+                      <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
+                      <p class="mb-0">Heritage Guitars Artisan Aged Collection H-530 Electric Guitar w/Case - Antique
+                        Natural</p>
                     </div>
                     <div class="product-bottom">
-                      <div class="price">$4,200.00 </div>
+                      <div class="text-center text-danger font-weight-bold my-2">$4,200.00 </div>
                     </div>
                   </a>
                 </div>
@@ -218,13 +218,13 @@
                         src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/b/m/bm_01423.jpg"
                         alt="guitar">
                     </div>
-                    <div class="product-details">
-                      <span class="view-icon"></span>
-                      <h4>Heritage Guitars</h4>
-                      <p>Heritage Guitars Artisan Aged Collection H-150 Electric Guitar w/Case - Trans Cherry</p>
+                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
+                      <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
+                      <p class="mb-0">Heritage Guitars Artisan Aged Collection H-150 Electric Guitar w/Case - Trans
+                        Cherry</p>
                     </div>
                     <div class="product-bottom">
-                      <div class="price">$4,200.00 </div>
+                      <div class="text-center text-danger font-weight-bold my-2">$4,200.00 </div>
                     </div>
                   </a>
                 </div>
@@ -237,13 +237,12 @@
                         src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/b/m/bm_01406.jpg"
                         alt="guitar">
                     </div>
-                    <div class="product-details">
-                      <span class="view-icon"></span>
-                      <h4>Furch Guitars</h4>
-                      <p>Furch Guitars RED SR Grand Auditorium Cutaway Guitar w/LR Baggs Pickup + Case</p>
+                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
+                      <h4 class="h6 font-weight-bold">Furch Guitars</h4>
+                      <p class="mb-0">Furch Guitars RED SR Grand Auditorium Cutaway Guitar w/LR Baggs Pickup + Case</p>
                     </div>
                     <div class="product-bottom">
-                      <div class="price">$5,000.00 </div>
+                      <div class="text-center text-danger font-weight-bold my-2">$5,000.00 </div>
                     </div>
                   </a>
                 </div>
@@ -258,13 +257,13 @@
                         src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/v/i/violet-d-sy-front_1.png"
                         alt="guitar">
                     </div>
-                    <div class="product-details">
-                      <span class="view-icon"></span>
-                      <h4>Furch Guitars</h4>
-                      <p>Furch Guitars VIOLET SY Dreadnought Guitar w/LR Baggs Pickup + Bonus Deluxe Gigbag</p>
+                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
+                      <h4 class="h6 font-weight-bold">Furch Guitars</h4>
+                      <p class="mb-0">Furch Guitars VIOLET SY Dreadnought Guitar w/LR Baggs Pickup + Bonus Deluxe Gigbag
+                      </p>
                     </div>
                     <div class="product-bottom">
-                      <div class="price">$1,500.00 </div>
+                      <div class="text-center text-danger font-weight-bold my-2">$1,500.00 </div>
                     </div>
                   </a>
                 </div>
@@ -277,13 +276,12 @@
                         src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/v/i/violet-g-sy-front.png"
                         alt="guitar">
                     </div>
-                    <div class="product-details">
-                      <span class="view-icon"></span>
-                      <h4>Furch Guitars</h4>
-                      <p>Furch Guitars VIOLET SY Grand Auditorium Guitar w/Bonus Deluxe Gigbag</p>
+                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
+                      <h4 class="h6 font-weight-bold">Furch Guitars</h4>
+                      <p class="mb-0">Furch Guitars VIOLET SY Grand Auditorium Guitar w/Bonus Deluxe Gigbag</p>
                     </div>
                     <div class="product-bottom">
-                      <div class="price">$1,400.00 </div>
+                      <div class="text-center text-danger font-weight-bold my-2">$1,400.00 </div>
                     </div>
                   </a>
                 </div>
@@ -296,21 +294,22 @@
                         src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/i/n/indigo-g-cy-front.png"
                         alt="guitar">
                     </div>
-                    <div class="product-details">
-                      <span class="view-icon"></span>
-                      <h4>Furch Guitars</h4>
-                      <p>Furch Guitars VIOLET SY Grand Auditorium Guitar w/LR Baggs Pickup + Bonus Deluxe Gigbag</p>
+                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
+                      <h4 class="h6 font-weight-bold">Furch Guitars</h4>
+                      <p class="mb-0">Furch Guitars VIOLET SY Grand Auditorium Guitar w/LR Baggs Pickup + Bonus</p>
                     </div>
                     <div class="product-bottom">
-                      <div class="price">$1,600.00 </div>
+                      <div class="text-center text-danger font-weight-bold my-2">$1,600.00 </div>
                     </div>
                   </a>
                 </div>
               </li>
             </ul>
           </div>
-          <div class="col-8">
-            <h3><a href="#">LOAD <i class="fas fa-chevron-circle-down text-danger"></i> MORE</a></h3>
+          <div class="col-12 d-flex justify-content-center py-3">
+            <h3><a class="h4 text-dark" href="#">LOAD <i class="fas fa-chevron-circle-down text-danger"></i>
+                MORE</a>
+            </h3>
           </div>
         </div>
         <section class="bottom-section container-fluid row m-0 px-0 w-100">
@@ -331,9 +330,10 @@
             </ul>
           </div>
         </section>
+      </section>
     </main>
     <footer>
-      <div class="top-footer container-fluid row w-100 m-0 mt-3 px-0">
+      <div class="top-footer container-fluid row w-100 m-0 px-0">
         <div class="footer-content d-flex justify-content-center align-items-center col-sd-12  w-100 m-1">
           <div class="footer-col px-2">
             <h4 class="text-danger pt-3">JC MUSIC STORE</h4>
@@ -356,13 +356,13 @@
             <h4 class="text-danger">About</h4>
             <div class="footer-info d-none text-white d-md-block">
               <ul class="fmenu text-white">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Servicing & Repairs</a></li>
-                <li><a href="#">Work for us!</a></li>
-                <li><a href="#">AV Installations</a></li>
-                <li><a href="#">Schools / Education</a></li>
-                <li><a href="#">Rent Now</a></li>
-                <li><a href="#">Trade-ins</a></li>
+                <li><a class="text-white" href="#">About Us</a></li>
+                <li><a class="text-white" href="#">Servicing & Repairs</a></li>
+                <li><a class="text-white" href="#">Work for us!</a></li>
+                <li><a class="text-white" href="#">AV Installations</a></li>
+                <li><a class="text-white" href="#">Schools / Education</a></li>
+                <li><a class="text-white" href="#">Rent Now</a></li>
+                <li><a class="text-white" href="#">Trade-ins</a></li>
               </ul>
             </div>
           </div>
@@ -371,13 +371,13 @@
             <h4 class="text-danger">Support</h4>
             <div class="footer-info d-none text-white d-md-block">
               <ul class="fmenu text-white">
-                <li><a href="#">Shipping & Returns</a></li>
-                <li><a href="#">Payment Options</a></li>
-                <li><a href="#">Privacy & Security</a></li>
-                <li><a href="#">Terms & Conditions</a></li>
-                <li><a href="#">Price Match Guarantee</a></li>
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">COVID-19</a></li>
+                <li><a class="text-white" href="#">Shipping & Returns</a></li>
+                <li><a class="text-white" href="#">Payment Options</a></li>
+                <li><a class="text-white" href="#">Privacy & Security</a></li>
+                <li><a class="text-white" href="#">Terms & Conditions</a></li>
+                <li><a class="text-white" href="#">Price Match Guarantee</a></li>
+                <li><a class="text-white" href="#">My Account</a></li>
+                <li><a class="text-white" href="#">COVID-19</a></li>
               </ul>
             </div>
           </div>
@@ -388,7 +388,7 @@
               <address>Av. Larco 2606, Miraflores</address>
               <p><strong>Phone</strong> +51 2 6282 3199</p>
               <p><strong>Fax</strong> +61 2 6282 5436</p>
-              <p><a href="#">Contact Us</a></p>
+              <p><a class="text-white" href="#">Contact Us</a></p>
             </div>
           </div>
 
