--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
         <h5 class="text-white text-center p-1 m-0">Hi. What are you looking for today?</h5>
         <div class="d-flex justify-content-center">
           <input class="bg-transparent border-white w-25" type="text" placeholder="Search" />
-          <button type="button" class="bttn-icon p-2 btn-outline-light bg-gradient-light"><i class="fas fa-search"></i>
-          </button>
+          <a href=""><button type="button" class="bttn-icon p-2 btn-outline-light bg-gradient-light"><i
+                class="fas fa-search"></i>
+            </button></a>
         </div>
       </div>
     </header>
@@ -202,7 +203,7 @@
       </section>
     </main>
     <footer>
-      <div class="top-footer container-fluid row w-100 m-0 mt-3 px-0">
+      <div class="top-footer container-fluid row w-100 m-0 px-0">
         <div class="footer-content d-flex justify-content-center align-items-center col-sd-12  w-100 m-1">
           <div class="footer-col px-2">
             <h4 class="text-danger pt-3">JC MUSIC STORE</h4>
@@ -225,13 +226,13 @@
             <h4 class="text-danger">About</h4>
             <div class="footer-info d-none text-white d-md-block">
               <ul class="fmenu text-white">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Servicing & Repairs</a></li>
-                <li><a href="#">Work for us!</a></li>
-                <li><a href="#">AV Installations</a></li>
-                <li><a href="#">Schools / Education</a></li>
-                <li><a href="#">Rent Now</a></li>
-                <li><a href="#">Trade-ins</a></li>
+                <li><a class="text-white" href="#">About Us</a></li>
+                <li><a class="text-white" href="#">Servicing & Repairs</a></li>
+                <li><a class="text-white" href="#">Work for us!</a></li>
+                <li><a class="text-white" href="#">AV Installations</a></li>
+                <li><a class="text-white" href="#">Schools / Education</a></li>
+                <li><a class="text-white" href="#">Rent Now</a></li>
+                <li><a class="text-white" href="#">Trade-ins</a></li>
               </ul>
             </div>
           </div>
@@ -240,13 +241,13 @@
             <h4 class="text-danger">Support</h4>
             <div class="footer-info d-none text-white d-md-block">
               <ul class="fmenu text-white">
-                <li><a href="#">Shipping & Returns</a></li>
-                <li><a href="#">Payment Options</a></li>
-                <li><a href="#">Privacy & Security</a></li>
-                <li><a href="#">Terms & Conditions</a></li>
-                <li><a href="#">Price Match Guarantee</a></li>
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">COVID-19</a></li>
+                <li><a class="text-white" href="#">Shipping & Returns</a></li>
+                <li><a class="text-white" href="#">Payment Options</a></li>
+                <li><a class="text-white" href="#">Privacy & Security</a></li>
+                <li><a class="text-white" href="#">Terms & Conditions</a></li>
+                <li><a class="text-white" href="#">Price Match Guarantee</a></li>
+                <li><a class="text-white" href="#">My Account</a></li>
+                <li><a class="text-white" href="#">COVID-19</a></li>
               </ul>
             </div>
           </div>
@@ -257,7 +258,7 @@
               <address>Av. Larco 2606, Miraflores</address>
               <p><strong>Phone</strong> +51 2 6282 3199</p>
               <p><strong>Fax</strong> +61 2 6282 5436</p>
-              <p><a href="#">Contact Us</a></p>
+              <p><a class="text-white" href="#">Contact Us</a></p>
             </div>
           </div>
 
