add readme file and link on the search button

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <h5 class="text-white text-center p-1 m-0">Hi. What are you looking for today?</h5>
         <div class="d-flex justify-content-center">
           <input class="bg-transparent border-white w-25" type="text" placeholder="Search" />
-          <a href=""><button type="button" class="bttn-icon p-2 btn-outline-light bg-gradient-light"><i
-                class="fas fa-search"></i>
+          <a href="https://raw.githack.com/janis-jenny/JC-Music-Store/JCStore/Search.html"><button type="button"
+              class="bttn-icon p-2 btn-outline-light bg-gradient-light"><i class="fas fa-search"></i>
             </button></a>
         </div>
       </div>
