fix linter errors

--- a/Search.html
+++ b/Search.html
@@ -312,7 +312,7 @@
             </h3>
           </div>
         </div>
-        <section class="bottom-section container-fluid row m-0 px-0 w-100">
+        <div class="bottom-section container-fluid row m-0 px-0 w-100">
           <div class="brands container row m-0 px-0 w-100 col-12">
             <ul class="row d-flex justify-content-center align-items-center col-12 px-2 my-0">
               <li class="col-6 col-md-3 col-lg-2 pl-4"><a href="#"></a><img
@@ -329,7 +329,7 @@
                   src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Taylor.jpg" alt="taylor"></li>
             </ul>
           </div>
-        </section>
+        </div>
       </section>
     </main>
     <footer>
