--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <h5 class="text-white text-center p-1 m-0">Hi. What are you looking for today?</h5>
         <div class="d-flex justify-content-center">
           <input class="bg-transparent border-white w-25" type="text" placeholder="Search" />
-          <a href="https://raw.githack.com/janis-jenny/JC-Music-Store/JCStore/Search.html"><button type="button"
-              class="bttn-icon p-2 btn-outline-light bg-gradient-light"><i class="fas fa-search"></i>
-            </button></a>
+          <button type="button" class="bttn-icon p-2 btn-outline-light bg-gradient-light"><i class="fas fa-search"><a
+                href="https://raw.githack.com/janis-jenny/JC-Music-Store/JCStore/Search.html"></a></i>
+          </button>
         </div>
       </div>
     </header>
@@ -79,7 +79,7 @@
           <button type="button" class="btn-danger rounded w-23 px-3 h-50">Learn More</button>
         </div>
       </section>
-      <section class="shipping row w-100 m-0">
+      <div class="shipping row w-100 m-0">
         <ul class="row w-100 m-0 mt-3">
           <li class="col-12 col-md-6 col-lg-2 px-0 d-flex flex-column align-items-center"><a class="img-shipping py-2"
               href="#">
@@ -136,7 +136,7 @@
             <p class="text-center p-1"><small>Read what our customers say about us</small></p>
           </li>
         </ul>
-      </section>
+      </div>
       <hr>
       <section class="category">
         <div class="row ml-1 p-0 m-0">
@@ -180,7 +180,7 @@
           <div class="d-flex justify-content-center align-items-center p-0 m-0 w-100">
             <input class="bg-transparent border-danger py-1" type="text" placeholder="Enter your email address" />
             <button type="button" class="bttn-icon p-0 py-1 m-0 bg-danger border-danger">
-              <p class="btn-danger w-23 px-3 h-50 text-white mb-0">Subscribe</p>
+              <span class="btn-danger w-23 px-3 h-50 text-white mb-0">Subscribe</span>
             </button>
           </div>
         </div>
