--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <h5 class="text-white text-center p-1 m-0">Hi. What are you looking for today?</h5>
         <div class="d-flex justify-content-center">
           <input class="bg-transparent border-white w-25" type="text" placeholder="Search" />
-          <button type="button" class="bttn-icon p-2 btn-outline-light bg-gradient-light"><i class="fas fa-search"><a
-                href="https://raw.githack.com/janis-jenny/JC-Music-Store/JCStore/Search.html"></a></i>
-          </button>
+          <a href="https://raw.githack.com/janis-jenny/JC-Music-Store/JCStore/Search.html"><button type="button"
+              class="bttn-icon p-2 btn-outline-light bg-gradient-light"><i class="fas fa-search"></i>
+            </button></a>
         </div>
       </div>
     </header>
