--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <img src=" ./images/logo.png" alt="Logo">
       </div>
       <ul class="col-5 d-flex justify-content-start p-0 mb-0">
-        <li Class="px-2 font-weight-bold"><a class=" text-white" href="#">Shop by category></a></li>
-        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="text-white" href="#">Videos</a></li>
+        <li Class="px-2 font-weight-bold"><a class=" text-white" href="#">Shop by category ></a></li>
+        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="text-white" href="#">Home</a></li>
         <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="text-white" href="#">Support</a></li>
       </ul>
       <ul class="col-6 d-flex justify-content-end p-0 mb-0 pr-4">
@@ -51,7 +51,7 @@
     <header class="main-bg w-100 container-fluid m-0 px-0 row mt-4">
       <div class="logo-img m-0 p-0 d-flex justify-content-center align align-items-center col-12 mt-5 pt-5">
         <img src="./images/logo.png" alt="logo">
-        <h2 class="logo-name font-weight-bold text-white pt-2 px-1 text-center">JC Music Store</h2>
+        <h1 class="logo-name font-weight-bold text-white pt-2 px-1 text-center">JC Music Store</h1>
       </div>
       <div class="searchbox p-0 col 6 mt-5 pt-5">
         <h5 class="text-white text-center p-1 m-0">Hi. What are you looking for today?</h5>
@@ -66,7 +66,7 @@
     </header>
     <main class="container-fluid px-0">
       <section class="sale-info row w-100 m-0 px-0">
-        <h2 class="h3 text-center text-white font-weight-bold col-12 m-auto">THREE GREAT WAYS TO SHOP WITH US</h2>
+        <h2 class="h4 text-center text-white font-weight-bold col-12 m-auto">THREE GREAT WAYS TO SHOP WITH US</h2>
         <div class="checks row col-12 text-center text-white mt-3 px-0 mx-0">
           <p class="col-12 col-md-4 px-0"><i class="text-danger fas fa-check px-2"></i>We are open for sales, repairs
             and rentals.
@@ -77,10 +77,10 @@
           <p class="col-12 col-md-4 px-0"><i class="text-danger fas fa-check px-2"></i>Curb Side Shopping</p>
         </div>
         <div class="col-12 d-flex justify-content-center rounded mx-0 mb-3 px-0">
-          <button type="button" class="btn-danger rounded w-23 px-3 h-50">Learn More</button>
+          <button type="button" class="btn-color text-white rounded w-23 px-3 h-50">Learn More</button>
         </div>
       </section>
-      <div class="shipping row w-100 m-0">
+      <div class="shipping bg-white border-bottom border-dark row w-100 m-0 my-2">
         <ul class="row w-100 m-0 mt-3">
           <li class="col-12 col-md-6 col-lg-2 px-0 d-flex flex-column align-items-center"><a class="img-shipping py-2"
               href="#">
@@ -138,38 +138,38 @@
           </li>
         </ul>
       </div>
-      <hr>
+
       <section class="category">
-        <div class="row ml-1 p-0 m-0">
+        <div class="row ml-1 p-0 m-0 mt-3">
           <div
-            class="instrument electric-guitars col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
+            class="instrument electric-guitars col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-2">
             <h3 class="h5 text-danger font-weight-bold">ELECTRIC GUITARS</h3>
-            <button type="button" class="text-white bg-danger border-0 rounded px-1">Shop now</button>
+            <button type="button" class="btn-color text-white rounded border-0 p-1">Shop now</button>
           </div>
           <div
             class="instrument pedals col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
             <h3 class="h5 text-danger font-weight-bold">PEDALS</h3>
-            <button type="button" class="text-white bg-danger border-0 rounded px-1">Shop now</button>
+            <button type="button" class="btn-color text-white rounded border-0 p-1">Shop now</button>
           </div>
           <div
-            class="instrument acustic-guitars col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
+            class="instrument acustic-guitars col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-2">
             <h3 class="h5 text-danger font-weight-bold">ACOUSTIC GUITARS</h3>
-            <button type="button" class="text-white bg-danger border-0 rounded px-1">Shop now</button>
+            <button type="button" class="btn-color text-white rounded border-0 p-1">Shop now</button>
           </div>
           <div
-            class="instrument bass col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
+            class="instrument bass col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-2">
             <h3 class="h5 text-danger font-weight-bold">BASS</h3>
-            <button type="button" class="text-white bg-danger border-0 rounded px-1">Shop now</button>
+            <button type="button" class="btn-color text-white rounded border-0 p-1">Shop now</button>
           </div>
           <div
-            class="instrument keyboards col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
+            class="instrument keyboards col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-2">
             <h3 class="h5 text-danger font-weight-bold">kEYBOARDS</h3>
-            <button type="button" class="text-white bg-danger border-0 rounded px-1">Shop now</button>
+            <button type="button" class="btn-color text-white rounded border-0 p-1">Shop now</button>
           </div>
           <div
-            class="instrument drum-kits col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
+            class="instrument drum-kits col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-2">
             <h3 class="h5 text-danger font-weight-bold">DRUM KITS.</h3>
-            <button type="button" class="text-white bg-danger border-0 rounded px-1">Shop now</button>
+            <button type="button" class="btn-color text-white rounded border-0 p-1">Shop now</button>
           </div>
         </div>
       </section>
