--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
   <div class="main-container container-fluid p-0 m-0">
     <nav class="row navbar w-100 container-fluid mx-0 p-0 fixed-top">
       <div class="logo-img col-1 d-flex justify-content-center align-items-center w-50 h-50">
-        <img src=" ./images/logo.png" alt="Logo">
+        <a href="#"><img src="./images/logo.png" alt="Logo"></a>
       </div>
       <ul class="col-5 d-flex justify-content-start p-0 mb-0">
-        <li Class="px-2 font-weight-bold"><a class=" text-white" href="#">Shop by category ></a></li>
-        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="text-white" href="#">Home</a></li>
-        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="text-white" href="#">Support</a></li>
+        <li Class="px-2 font-weight-bold"><a class="link text-white" href="#">Shop by category ></a></li>
+        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="link text-white" href="#">Home</a></li>
+        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="link text-white" href="#">Support</a></li>
       </ul>
       <ul class="col-6 d-flex justify-content-end p-0 mb-0 pr-4">
         <li Class="px-2">
@@ -40,17 +40,18 @@
             <p class="text-white font-weight-bold d-none d-lg-block mb-0">Account</p>
           </a>
         </li>
-        <li Class="px-2"><a class="text-white d-flex mt-1" href="#"><i
+        <li Class="px-2"><a class="link text-white d-flex mt-1" href="#"><i
               class="d-none d-lg-block fas fa-shopping-cart px-3 py-1"></i>
             <p class="text-white font-weight-bold d-none d-lg-block mb-0">Cart</p>
           </a></li>
-        <li Class="px-2 d-sd-block d-md-block d-lg-none"><a class="text-white d-flex mt-1" href="#"><i
+        <li Class="px-2 d-sd-block d-md-block d-lg-none"><a class="link text-white d-flex mt-1" href="#"><i
               class="fas fa-bars px-3 py-1"></i></a></li>
       </ul>
     </nav>
+
     <header class="main-bg w-100 container-fluid m-0 px-0 row mt-4">
-      <div class="logo-img m-0 p-0 d-flex justify-content-center align align-items-center col-12 mt-5 pt-5">
-        <img src="./images/logo.png" alt="logo">
+      <div class="m-0 p-0 d-flex justify-content-center align align-items-center col-12 mt-5 pt-5">
+        <img class="logo-img" src="./images/logo.png" alt="logo">
         <h1 class="logo-name font-weight-bold text-white pt-2 px-1 text-center">JC Music Store</h1>
       </div>
       <div class="searchbox p-0 col 6 mt-5 pt-5">
@@ -147,7 +148,7 @@
             <button type="button" class="btn-color text-white rounded border-0 p-1">Shop now</button>
           </div>
           <div
-            class="instrument pedals col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
+            class="instrument pedals col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-2">
             <h3 class="h5 text-danger font-weight-bold">PEDALS</h3>
             <button type="button" class="btn-color text-white rounded border-0 p-1">Shop now</button>
           </div>
@@ -173,7 +174,33 @@
           </div>
         </div>
       </section>
-      <section class="bottom-section container-fluid row m-0 px-0 w-100">
+      <section class="bottom-section bg-color4container-fluid row m-0 my-3 px-0 w-100">
+
+        <div class="slide container d-flex justify-content-center align-items-center w-100 h-100">
+          <div class="col-2 ">
+            <a class="swipe" href="#"><i class="fa fa-chevron-left"></i></a>
+          </div>
+          <div class="col-4 d-flex flex m-0">
+            <h2 class=" h4 tittle">STAFF PICK</h2>
+            <div class="ad-image"><img src="./images/drums-staff-pick.jpg" alt="guitar"></div>
+          </div>
+          <div class="col-4 d-flex flex">
+            <h3 class="text-danger font-weight-bold">
+              Gretsch Drums
+            </h3>
+            <p>
+              Gretsch Drums Brooklyn Series 4pc Drum Kit - Shell Pack - Ice Blue Metallic
+            </p>
+            <div>
+              <button type="button" class="btn-color text-white rounded px-3 h-50">$4,500</button>
+              <button type="button" class="btn-color text-white rounded px-3 h-50">Add to cart</button>
+            </div>
+          </div>
+          <div class="col-2">
+            <a class="swipe" href="#"><i class="fa fa-chevron-right"></i></a>
+          </div>
+        </div>
+
         <div class="sign-in col-12 w-100 my-5 d-flex flex-column justify-content-center align-items-center">
           <h3 class="text-center">SIGN UP FOR OUR EMAIL</h3>
           <p class="text-center py-4">GET THE BEST DEALS, SALES AND OFFERS FROM THE BEST ONLINE MUSIC STORE IN
@@ -205,7 +232,8 @@
     </main>
     <footer>
       <div class="top-footer container-fluid row w-100 m-0 px-0">
-        <div class="footer-content d-flex justify-content-center align-items-center col-sd-12  w-100 m-1">
+        <div
+          class="footer-content d-flex justify-content-center align-items-center col-sd-12 w-100 m-1 m-lg-0 p-lg-0 col-lg-4">
           <div class="footer-col px-2">
             <h4 class="text-danger pt-3">JC MUSIC STORE</h4>
             <div class="footer-info d-flex justify-content-center align-items-start flex-column text-white pt-2">
@@ -222,8 +250,8 @@
             </div>
           </div>
         </div>
-        <div class="cols container-fluid row w-100 m-0 px-0">
-          <div class="footer-col col-sd-12 col-md-3">
+        <div class="cols container-fluid row w-100 m-0 px-0 mt-3 col-lg-8">
+          <div class="footer-col col-sd-12 col-md-3 col-lg-3">
             <h4 class="text-danger">About</h4>
             <div class="footer-info d-none text-white d-md-block">
               <ul class="fmenu text-white">
@@ -238,7 +266,7 @@
             </div>
           </div>
 
-          <div class="footer-col col-sd-12 col-md-3">
+          <div class="footer-col col-sd-12 col-md-3 col-lg-3">
             <h4 class="text-danger">Support</h4>
             <div class="footer-info d-none text-white d-md-block">
               <ul class="fmenu text-white">
@@ -253,7 +281,7 @@
             </div>
           </div>
 
-          <div class="footer-col col-sd-12 col-md-3">
+          <div class="footer-col col-sd-12 col-md-3 col-lg-3">
             <h4 class="text-danger">Contact</h4>
             <div class="footer-info d-none text-white d-md-block">
               <address>Av. Larco 2606, Miraflores</address>
@@ -263,7 +291,7 @@
             </div>
           </div>
 
-          <div class="footer-col col.sd-12 col-md-3">
+          <div class="footer-col col.sd-12 col-md-3 col-lg-3">
             <h4 class="text-danger">Store hours</h4>
             <div class="footer-info d-none text-white d-md-block">
               <p><strong>Mon-Thur</strong> 9:00am - 5:30pm</p>
@@ -274,10 +302,9 @@
           </div>
         </div>
       </div>
-      <div class="bottom-footer container-fluid row w-100 m-0 px-0">
+      <div class="bottom-footer container-fluid border-top row w-100 m-0 px-0">
         <p class="copyright col-12 d-flex justify-content-center align-items-center text-white px-0 pt-2">© 2020 JC
-          Music Store.
-          All rights reserved.</p>
+          Music Store. All rights reserved.</p>
       </div>
     </footer>
   </div>
