change sidebar on nearch results page

--- a/Search.html
+++ b/Search.html
@@ -106,29 +106,32 @@
               </ul>
             </div>
             <div class="block-title w-100 py-2 bg d-flex justify-content-between">
-              <a class="text-white px-2" href="#">Pickup Cover</a>
+              <a class="text-white px-2" href="#">Brand</a>
               <i class="fas fa-chevron-circle-right text-dark px-3 py-1"></i>
             </div>
+            <fieldset class="d-flex">
+              <label><input type="checkbox" />Fender</label>
+              <label><input type="checkbox" />Gibson</label>
+              <label><input type="checkbox" />Taylor</label>
+            </fieldset>
             <div class="block-title w-100 py-2 bg d-flex justify-content-between">
-              <a class="text-white px-2" href="#">In-Stock?</a>
+              <a class="text-white px-2" href="#">Color</a>
               <i class="fas fa-chevron-circle-right text-dark px-3 py-1"></i>
             </div>
-            <div class="block-title w-100 py-2 bg d-flex justify-content-between">
-              <a class="text-white px-2" href="#">Staff Pick</a>
-              <i class="fas fa-chevron-circle-right text-dark px-3 py-1"></i>
-            </div>
+            <fieldset class="d-flex">
+              <label><input type="checkbox" />Red</label>
+              <label><input type="checkbox" />Black</label>
+              <label><input type="checkbox" />White</label>
+            </fieldset>
             <div class="block-title w-100 py-2 bg d-flex justify-content-between">
               <a class="text-white px-2" href="#">Price</a>
               <i class="fas fa-chevron-circle-right text-dark px-3 py-1"></i>
             </div>
-            <div class="block-title w-100 py-2 bg d-flex justify-content-between">
-              <a class="text-white px-2" href="#">Brand</a>
-              <i class="fas fa-chevron-circle-right text-dark px-3 py-1"></i>
-            </div>
-            <div class="block-title w-100 py-2 bg d-flex justify-content-between">
-              <a class="text-white px-2" href="#">Colour</a>
-              <i class="fas fa-chevron-circle-right text-dark px-3 py-1"></i>
-            </div>
+            <fieldset class="d-flex">
+              <label><input type="checkbox" />$1,500 - 2,500</label>
+              <label><input type="checkbox" />$2,500 - 3,500</label>
+              <label><input type="checkbox" />$ 3,500 +</label>
+            </fieldset>
           </div>
           <div class="product-list-box row col-8 d-flex my-3">
             <ul class="col-4">
