--- a/Search.html
+++ b/Search.html
@@ -79,7 +79,7 @@
             </div>
           </div>
         </div>
-        <div class="category-main container-fluid row p-0 m-0">
+        <div class="category-main container row p-0 mx-3">
           <div class="side-box col-4 d-flex flex-column align-items-start justify-content-start pr-0 my-3">
             <div class="block-title w-100 py-2 bg d-flex justify-content-between">
               <a class="text-white px-2" href="#">Category</a>
@@ -134,21 +134,21 @@
             </fieldset>
           </div>
           <div class="product-list-box row col-8 d-flex my-3">
-            <ul class="col-4">
+            <ul class="col-12">
               <li>
-                <div class="product-col">
+                <div class="product-col d-flex">
                   <a class="product-col" href="#">
-                    <div class="product-img">
+                    <div class="product-img w-50 d-flex">
                       <img
                         src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/b/m/bm_01447.jpg"
                         alt="guitar">
                     </div>
-                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
+                    <div class="product-details d-flex text-left text-dark pt-2 px-2 m-0">
                       <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
                       <p class="mb-0">Heritage Guitars Artisan Aged Collection H-150 Electric Guitar w/Case - Original
                         Sunburst</p>
                     </div>
-                    <div class="product-bottom">
+                    <div class="product-bottom d-flex">
                       <div class="text-center text-danger font-weight-bold my-2">$3,700.00 </div>
                     </div>
                   </a>
@@ -193,146 +193,30 @@
                 </div>
               </li>
             </ul>
-            <ul class="col-4">
-              <li>
-                <div class="product-col">
-                  <a class="product-col" href="#">
-                    <div class="product-img">
-                      <img
-                        src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/4/7/47650_heritage_artisan_aged_collection_h-530_antique_natural_ai09722_2_383x_3x.progressive.jpg"
-                        alt="guitar">
-                    </div>
-                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
-                      <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
-                      <p class="mb-0">Heritage Guitars Artisan Aged Collection H-530 Electric Guitar w/Case - Antique
-                        Natural</p>
-                    </div>
-                    <div class="product-bottom">
-                      <div class="text-center text-danger font-weight-bold my-2">$4,200.00 </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <div class="product-col">
-                  <a class="product-col" href="#">
-                    <div class="product-img">
-                      <img
-                        src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/b/m/bm_01423.jpg"
-                        alt="guitar">
-                    </div>
-                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
-                      <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
-                      <p class="mb-0">Heritage Guitars Artisan Aged Collection H-150 Electric Guitar w/Case - Trans
-                        Cherry</p>
-                    </div>
-                    <div class="product-bottom">
-                      <div class="text-center text-danger font-weight-bold my-2">$4,200.00 </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <div class="product-col">
-                  <a class="product-col" href="#">
-                    <div class="product-img">
-                      <img
-                        src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/b/m/bm_01406.jpg"
-                        alt="guitar">
-                    </div>
-                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
-                      <h4 class="h6 font-weight-bold">Furch Guitars</h4>
-                      <p class="mb-0">Furch Guitars RED SR Grand Auditorium Cutaway Guitar w/LR Baggs Pickup + Case</p>
-                    </div>
-                    <div class="product-bottom">
-                      <div class="text-center text-danger font-weight-bold my-2">$5,000.00 </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-            </ul>
-            <ul class="col-4">
-              <li>
-                <div class="product-col">
-                  <a class="product-col" href="#">
-                    <div class="product-img">
-                      <img
-                        src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/v/i/violet-d-sy-front_1.png"
-                        alt="guitar">
-                    </div>
-                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
-                      <h4 class="h6 font-weight-bold">Furch Guitars</h4>
-                      <p class="mb-0">Furch Guitars VIOLET SY Dreadnought Guitar w/LR Baggs Pickup + Bonus Deluxe Gigbag
-                      </p>
-                    </div>
-                    <div class="product-bottom">
-                      <div class="text-center text-danger font-weight-bold my-2">$1,500.00 </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <div class="product-col">
-                  <a class="product-col" href="#">
-                    <div class="product-img">
-                      <img
-                        src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/v/i/violet-g-sy-front.png"
-                        alt="guitar">
-                    </div>
-                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
-                      <h4 class="h6 font-weight-bold">Furch Guitars</h4>
-                      <p class="mb-0">Furch Guitars VIOLET SY Grand Auditorium Guitar w/Bonus Deluxe Gigbag</p>
-                    </div>
-                    <div class="product-bottom">
-                      <div class="text-center text-danger font-weight-bold my-2">$1,400.00 </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <div class="product-col">
-                  <a class="product-col" href="#">
-                    <div class="product-img">
-                      <img
-                        src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/i/n/indigo-g-cy-front.png"
-                        alt="guitar">
-                    </div>
-                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
-                      <h4 class="h6 font-weight-bold">Furch Guitars</h4>
-                      <p class="mb-0">Furch Guitars VIOLET SY Grand Auditorium Guitar w/LR Baggs Pickup + Bonus</p>
-                    </div>
-                    <div class="product-bottom">
-                      <div class="text-center text-danger font-weight-bold my-2">$1,600.00 </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-            </ul>
+            <div class="col-12 d-flex justify-content-center py-3">
+              <h3><a class="h4 text-dark" href="#">LOAD <i class="fas fa-chevron-circle-down text-danger"></i>
+                  MORE</a>
+              </h3>
+            </div>
           </div>
-          <div class="col-12 d-flex justify-content-center py-3">
-            <h3><a class="h4 text-dark" href="#">LOAD <i class="fas fa-chevron-circle-down text-danger"></i>
-                MORE</a>
-            </h3>
+          <div class="bottom-section container-fluid row m-0 px-0 w-100">
+            <div class="brands container row m-0 px-0 w-100 col-12">
+              <ul class="row d-flex justify-content-center align-items-center col-12 px-2 my-0">
+                <li class="col-6 col-md-3 col-lg-2 pl-4"><a href="#"></a><img
+                    src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Yamaha.jpg" alt="yamaha"></li>
+                <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
+                    src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Roland.jpg" alt="roland"></li>
+                <li class="col-6 col-md-3 col-lg-2"><a href="#"></a><img
+                    src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Fender.jpg" alt="fender"></li>
+                <li class="d-none d-md-block col-md-3 d-lg-block col-lg-2"><a href="#"></a><img
+                    src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Gibson.jpg" alt="gibson"></li>
+                <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
+                    src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Ibanez.jpg" alt="ibanez"></li>
+                <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
+                    src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Taylor.jpg" alt="taylor"></li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="bottom-section container-fluid row m-0 px-0 w-100">
-          <div class="brands container row m-0 px-0 w-100 col-12">
-            <ul class="row d-flex justify-content-center align-items-center col-12 px-2 my-0">
-              <li class="col-6 col-md-3 col-lg-2 pl-4"><a href="#"></a><img
-                  src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Yamaha.jpg" alt="yamaha"></li>
-              <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
-                  src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Roland.jpg" alt="roland"></li>
-              <li class="col-6 col-md-3 col-lg-2"><a href="#"></a><img
-                  src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Fender.jpg" alt="fender"></li>
-              <li class="d-none d-md-block col-md-3 d-lg-block col-lg-2"><a href="#"></a><img
-                  src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Gibson.jpg" alt="gibson"></li>
-              <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
-                  src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Ibanez.jpg" alt="ibanez"></li>
-              <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
-                  src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Taylor.jpg" alt="taylor"></li>
-            </ul>
-          </div>
-        </div>
       </section>
     </main>
     <footer>
