edit style of product list section and toolbar on  search results page

--- a/Search.html
+++ b/Search.html
@@ -65,15 +65,15 @@
     <main class="search container-fluid px-0">
       <section>
         <div class="toolbar w-100">
-          <div class="d-flex justify-content-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center bg-color2">
             <div>
-              <span class="px-3 py-1">Refine</span>
+              <span class="px-3">Refine</span>
             </div>
             <div class="w-50 d-flex justify-content-end align-items-center px-3">
-              <span class="pt-2 px-3"><strong>664</strong> total</span>
+              <span class="pt-1 px-3"><strong>664</strong> total</span>
               <div class="sort-by d-flex">
                 <span class="sort px-1 pt-3">Sort By</span>
-                <div class="custom-select px-2 my-2">
+                <div class="custom-select px-3 my-2">
                 </div>
               </div>
             </div>
@@ -81,9 +81,9 @@
         </div>
         <div class="category-main container row p-0 mx-3">
           <div class="side-box col-4 d-flex flex-column align-items-start justify-content-start pr-0 my-3">
-            <div class="block-title w-100 py-2 bg d-flex justify-content-between">
+            <div class="block-title w-100 py-2 bg-color3 d-flex justify-content-between">
               <a class="text-white px-2" href="#">Category</a>
-              <i class="fas fa-chevron-circle-right text-dark px-3 py-1"></i>
+              <i class="fas fa-chevron-circle-right text-dark px-2 py-1"></i>
             </div>
             <div class="list-box my-1">
               <ul class="border-light">
@@ -93,11 +93,11 @@
                 </li>
                 <li><a class="text-dark px-3" href="#">Bass</a>(49)
                 </li>
-                <li><a class="text-dark  px-3" href="#">Amps</a>(17)
+                <li><a class="text-dark px-3" href="#">Amps</a>(17)
                 </li>
-                <li><a class="text-dark px-3" href="#">Pianos/Keys</a>(10)
+                <li><a class="text-dark px-3" href="#">Pianos</a>(10)
                 </li>
-                <li><a class="text-dark px-3" href="#">Pedals & Effects</a>(46)
+                <li><a class="text-dark px-3" href="#">Pedals</a>(46)
                 </li>
                 <li><a class="text-dark px-3" href="#">Drums</a>(1)
                 </li>
@@ -105,89 +105,101 @@
                 </li>
               </ul>
             </div>
-            <div class="block-title w-100 py-2 bg d-flex justify-content-between">
+            <div class="block-title w-100 py-2 bg-color3 d-flex justify-content-between">
               <a class="text-white px-2" href="#">Brand</a>
-              <i class="fas fa-chevron-circle-right text-dark px-3 py-1"></i>
+              <i class="fas fa-chevron-circle-right text-dark px-2 py-1"></i>
             </div>
             <fieldset class="d-flex">
-              <label><input type="checkbox" />Fender</label>
-              <label><input type="checkbox" />Gibson</label>
-              <label><input type="checkbox" />Taylor</label>
+              <label class="px-2"><input type="checkbox" /> Fender</label>
+              <label class="px-2"><input type="checkbox" /> Gibson</label>
+              <label class="px-2"><input type="checkbox" /> Taylor</label>
             </fieldset>
-            <div class="block-title w-100 py-2 bg d-flex justify-content-between">
+            <div class="block-title w-100 py-2 bg-color3 d-flex justify-content-between">
               <a class="text-white px-2" href="#">Color</a>
-              <i class="fas fa-chevron-circle-right text-dark px-3 py-1"></i>
+              <i class="fas fa-chevron-circle-right text-dark px-2 py-1"></i>
             </div>
             <fieldset class="d-flex">
-              <label><input type="checkbox" />Red</label>
-              <label><input type="checkbox" />Black</label>
-              <label><input type="checkbox" />White</label>
+              <label class="px-2"><input type="checkbox" /> Red</label>
+              <label class="px-2"><input type="checkbox" /> Black</label>
+              <label class="px-2"><input type="checkbox" /> White</label>
             </fieldset>
-            <div class="block-title w-100 py-2 bg d-flex justify-content-between">
+            <div class="block-title w-100 py-2 bg-color3 d-flex justify-content-between">
               <a class="text-white px-2" href="#">Price</a>
-              <i class="fas fa-chevron-circle-right text-dark px-3 py-1"></i>
+              <i class="fas fa-chevron-circle-right text-dark px-2 py-1"></i>
             </div>
             <fieldset class="d-flex">
-              <label><input type="checkbox" />$1,500 - 2,500</label>
-              <label><input type="checkbox" />$2,500 - 3,500</label>
-              <label><input type="checkbox" />$ 3,500 +</label>
+              <label class="px-2"><input type="checkbox" /> $1,500 - 2,500</label>
+              <label class="px-2"><input type="checkbox" /> $2,500 - 3,500</label>
+              <label class="px-2"><input type="checkbox" /> $ 3,500 +</label>
             </fieldset>
           </div>
-          <div class="product-list-box row col-8 d-flex my-3">
+          <div class="product-list-box row col-8 d-flex mx-0 my-3">
             <ul class="col-12">
               <li>
-                <div class="product-col d-flex">
-                  <a class="product-col" href="#">
-                    <div class="product-img w-50 d-flex">
-                      <img
-                        src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/b/m/bm_01447.jpg"
-                        alt="guitar">
-                    </div>
-                    <div class="product-details d-flex text-left text-dark pt-2 px-2 m-0">
+                <div class="product-col d-md-flex mb-4 ml-4 bg-color5">
+                  <a class="product-col d-md-flex" href="#"></a>
+                  <div class="product-img w-md-40">
+                    <img src="./images/Heritage1.jpg" alt="guitar">
+                  </div>
+                  <div class="product-details w-md-60 text-left text-dark pt-2 px-4 m-0">
+                    <div class="d-flex align-center justify-content-between">
                       <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
-                      <p class="mb-0">Heritage Guitars Artisan Aged Collection H-150 Electric Guitar w/Case - Original
-                        Sunburst</p>
+                      <span class="btn btn-add"><i class="fas fa-plus secondary-color"></i>
+                      </span>
                     </div>
-                    <div class="product-bottom d-flex">
-                      <div class="text-center text-danger font-weight-bold my-2">$3,700.00 </div>
+                    <p class="mb-0">Heritage Guitars Artisan Aged Collection H-150 Electric Guitar w/Case - Original
+                      Sunburst</p>
+                    <div
+                      class="text-center text-danger font-weight-bold my-3 d-flex align-center justify-content-between">
+                      <p>$3,700.00</p>
+                      <button type="button" class="btn-color text-white rounded px-3 h-50">Buy</button>
                     </div>
+                  </div>
                   </a>
                 </div>
               </li>
               <li>
-                <div class="product-col">
-                  <a class="product-col" href="#">
-                    <div class="product-img">
-                      <img
-                        src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/b/m/bm_01406.jpg"
-                        alt="guitar">
+                <div class="product-col d-md-flex mb-4 ml-4 bg-color5">
+                  <a class="product-col d-md-flex" href="#">
+                    <div class="product-img w-md-40">
+                      <img src="./images/Heritage2.jpg" alt="guitar">
                     </div>
-                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
-                      <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
+                    <div class="product-details w-md-60 text-left text-dark pt-2 px-4 m-0">
+                      <div class="d-flex align-center justify-content-between">
+                        <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
+                        <span class="btn btn-add"><i class="fas fa-plus secondary-color"></i>
+                        </span>
+                      </div>
                       <p class="mb-0">Heritage Guitars Artisan Aged Collection H-535 Electric Guitar w/Case - Trans
                         Cherryt</p>
-                    </div>
-                    <div class="product-bottom">
-                      <div class="text-center text-danger font-weight-bold my-2">$4,000.00 </div>
+                      <div
+                        class="text-center text-danger font-weight-bold my-3 d-flex align-center justify-content-between">
+                        <p>$3,700.00</p>
+                        <button type="button" class="btn-color text-white rounded px-3 h-50">Buy</button>
+                      </div>
                     </div>
                   </a>
                 </div>
               </li>
               <li>
-                <div class="product-col">
-                  <a class="product-col" href="#">
-                    <div class="product-img">
-                      <img
-                        src="https://www.bettermusic.com.au/media/catalog/product/cache/1/small_image/253x/9df78eab33525d08d6e5fb8d27136e95/h/r/hrt-012200123-aa_1563849864866_2048x2048.jpg"
-                        alt="guitar">
+                <div class="product-col d-md-flex mb-4 ml-4 bg-color5">
+                  <a class="product-col d-md-flex" href="#">
+                    <div class="product-img w-md-40">
+                      <img src="./images/Heritage3.jpg" alt="guitar">
                     </div>
-                    <div class="product-details text-left text-dark pt-2 px-2 m-0">
-                      <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
-                      <p class="mb-0">Heritage Guitars Artisan Aged Collection H-535 Electric Guitar w/Case - Original
-                        Sunburst</p>
-                    </div>
-                    <div class="product-bottom">
-                      <div class="text-center text-danger font-weight-bold my-2">$4,000.00 </div>
+                    <div class="product-details w-md-60 text-left text-dark pt-2 px-4 m-0">
+                      <div class="d-flex align-center justify-content-between">
+                        <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
+                        <span class="btn btn-add"><i class="fas fa-plus secondary-color"></i>
+                        </span>
+                      </div>
+                      <p class="mb-0">Heritage Guitars Artisan Aged Collection H-535 Electric Guitar w/Case - Trans
+                        Cherryt</p>
+                      <div
+                        class="text-center text-danger font-weight-bold my-3 d-flex align-center justify-content-between">
+                        <p>$3,700.00</p>
+                        <button type="button" class="btn-color text-white rounded px-3 h-50">Buy</button>
+                      </div>
                     </div>
                   </a>
                 </div>
