--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
     <footer>
       <div class="top-footer container-fluid row w-100 m-0 px-0">
         <div
-          class="footer-content d-flex justify-content-center align-items-center col-sd-12 w-100 m-1 m-lg-0 p-lg-0 col-lg-4">
-          <div class="footer-col px-2">
+          class="footer-content d-flex justify-content-center align-items-center col-sd-12 w-100 m-lg-0 p-lg-0 col-lg-4">
+          <div class="footer-col px-4">
             <h4 class="text-danger pt-3">JC MUSIC STORE</h4>
             <div class="footer-info d-flex justify-content-center align-items-start flex-column text-white pt-2">
               <p>First opened over 3 years ago, JC Music Store is an Peruvian owned and operated independent music
